2007-06-06  Brian Cameron  <brian.cameron@sun.com>

	* C/gdm.xml: Fix description of gdmchooser options to remove
	  double wording.

2007-05-04  Frederic Crozat  <fcrozat@mandriva.com>

	* C/gdm.xml:
	Update background property documentation.

2007-04-28  Changwoo Ryu  <cwryu@debian.org>

	* Makefile.am (SUBDIRS): Removed "ko".
	(DOC_LINGUAS): Added "ko".
	* ko/*: Migrated to gnome-doc-utils.

2007-04-21  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation by Lucas Vieites

2007-03-26  William Jon McCann  <mccann@jhu.edu>

	reviewed by: <delete if not using a buddy>

	* C/gdm.xml:

2007-03-11  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2007-02-16  David Lodge <dave@cirt.net>

	* en_GB/en_GB.po: Added English (British) translation
	* Makefile.am: Added en_GB

2007-02-02  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2006-12-12  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-09-25  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-08-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-07-27  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-07-26  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.

2006-07-24  Brian Cameron  <brian.cameron@sun.com>

	* Removing sv from Makefile.am since it doesn't build properly.
	  Running autogen.sh complains that Makefile.am doesn't exist, 
	  and adding one based on the others seems to cause a build
	  problem also.

2006-07-23  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* sv/*.xml: Removed obsolete files.
	* Makefile.am: Added sv to DOC_LINGUAS.

2006-07-02  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
