@@ -6900,7 +6900,7 @@ homogeneous=&quot;bool&quot;&gt;
       </sect3>
 
       <sect3 id="stocklabels">
-        <title>Stock</title>
+        <title>Stock node</title>
 
         <para>
           Certain common localized labels can be specified via the stock
@@ -6916,7 +6916,7 @@ homogeneous=&quot;bool&quot;&gt;
         </para>
         <para>
           <filename>caps-lock-warning</filename>,
-          _(&quot;Caps Lock key is on.&quot; 
+          _(&quot;Caps Lock is on.&quot; 
         </para>
         <para>
           <filename>chooser</filename>, _(&quot;Remote Login via _XDMCP&quot;
@@ -6925,7 +6925,7 @@ homogeneous=&quot;bool&quot;&gt;
           <filename>config</filename>, _(&quot;_Configure&quot;
         </para>
         <para>
-          <filename>custom_cmd[0-9]</filename>, _(&quot;Custom_[0-9]&quot;
+          <filename>custom_cmd[0-9]</filename>, getting label from config file
         </para>
         <para>
           <filename>disconnect</filename>, _(&quot;D_isconnect&quot;
@@ -6940,6 +6940,9 @@ homogeneous=&quot;bool&quot;&gt;
           <filename>ok</filename>, _(&quot;_OK&quot;
         </para>
         <para>
+          <filename>options</filename>, _(&quot;_Options&quot;
+        </para>
+        <para>
           <filename>quit</filename>, _(&quot;_Quit&quot;
         </para>
         <para>
@@ -6949,7 +6952,7 @@ homogeneous=&quot;bool&quot;&gt;
           <filename>session</filename>, _(&quot;_Session&quot;
         </para>
         <para>
-          <filename>startover</filename>, _(&quot;_Start Over&quot;
+          <filename>startagain</filename>, _(&quot;_Start Again&quot;
         </para>
         <para>
           <filename>suspend</filename>, _(&quot;Sus_pend&quot;
