@@ -1,5 +1,11 @@
 2007-06-06  Brian Cameron  <brian.cameron@sun.com>
 
+	* C/gdm.xml: Fix stock label information in the docs so it is
+	  accurate.  Fixes bug #445291.  Patch by Claude Paroz
+	  <claude@2xlibre.net>.
+
+2007-06-06  Brian Cameron  <brian.cameron@sun.com>
+
 	* C/gdm.xml: Fix description of gdmchooser options to remove
 	  double wording.
 
